# dodao-ai-agents

./: .gitignore  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cf-ai-agent.yml
agent-tools/: Makefile  README.md  agents-tools.json  deploy.py
agent-tools/cdk/: .env.example  README.md  cdk.json  package.json  tsconfig.json
agent-tools/extract-criterion-info/: .env.example  README.md  (+3 more)
blogs/: article.md  article_2.md  crowd-funding.md  spider-chart-investment-anlaysis.md
crowd-fund-analysis/: Makefile  pyproject.toml
docs/: book.toml
koala-gains-backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
langflow/: .gitignore  Dockerfile  Makefile  README.md  lightsail.tf
langflow-bundles/: .gitignore  docker-compose.yaml  pyproject.toml
scripts/: populate_criterion.py  pyproject.toml
scripts/output/health-care/health_care_equipment_&_services/: health_care_equipment.json  health_care_supplies.json
scripts/output/health-care/pharmaceuticals_biotechnology_&_life_sciences/: biotechnology.json  pharmaceuticals.json
scripts/output/information-technology-it/semiconductors_&_semiconductor_equipment/: semiconductor_materials_&_equipment.json  semiconductors_(design_&_manufacturing).json
scripts/output/information-technology-it/software_services/: application_software.json  systems_software.json
scripts/output/information-technology-it/technology_&_hardware_equipment/: communications_equipment.json  technology_hardware,_storage_&_peripherals.json
tasks/: criterion_info.md  sec_tool.md  stock_types_tasks.md
(+228 files in other folders)
