[tool.poetry]
name = "DoDAOScripts"
version = "0.1.0"
description = ""
authors = ["DoDAO"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain-core = "0.3.34"
langchain-openai = "0.3.4"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
